<resources>
    <string name="app_name">Devs Hunter</string>
    <string name="username">Username</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="accountQuestion">Don\'t have an account yet?</string>
    <string name="joinsuggestion">join with us</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="for_any_task">For Any Task</string>
    <string name="find_any_developer">Find Any Developer</string>
    <string name="or">_________________ OR _________________</string>
    <string name="login_with">login with</string>
    <string name="nodesc">noDesc</string>
    <string name="hello">Hello,,</string>
    <string name="sign_into_you_account">Sign Into you Account</string>
    <string name="why_you_should_hire_us">Why you should hire us..</string>
    <string name="lorem_ipsum">
    """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."""</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="project">Project</string>
    <string name="profile">Profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>