<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#51997F9E"
        android:orientation="vertical"
        android:padding="5dp"
        android:theme="@style/AppTheme.Material"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_login"
            app:layout_constraintStart_toStartOf="@+id/iv_login"
            app:layout_constraintTop_toBottomOf="@+id/iv_login"
            app:layout_constraintVertical_bias="0.065"
            app:shapeAppearance="@drawable/bg_icon_sign_in">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_welcome_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/firamono_bold"
                    android:gravity="center"
                    android:text="WELCOME BACK"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_please_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/firamono_regular"
                    android:gravity="center"
                    android:text="Please login to your account"
                    android:textColor="@color/colorWhiteTransparance" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:startIconDrawable="@drawable/ic_baseline_supervised_user_circle_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/firamono_regular"
                        android:hint="@string/username" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:startIconDrawable="@drawable/ic_outline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/firamono_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/firamono_regular"
                    android:text="@string/forgot_password"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorYellowDark"
                    android:fontFamily="@font/firamono_bold"
                    android:text="@string/log_in"
                    app:cornerRadius="10dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView"
            app:layout_constraintHorizontal_bias="0.652"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:layout_constraintVertical_bias="0.064">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/firamono_regular"
                android:text="Don't have an Account? "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/firamono_bold"
                android:text="Sign Up"
                android:textColor="@color/colorYellowDark"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/firamono_medium"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorYellowDark"
            android:gravity="center"
            android:text="Login With Google"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_google"
            app:iconSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.226" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
